fixed an alignment and text that was wrong actual final push though

--- a/Projects.css
+++ b/Projects.css
@@ -18,7 +18,7 @@
 .navbar-socials {
     display: flex;
     align-items: center;
-    margin-right: 70px;
+    margin-right: 10px;
     gap: 25px;
 }
 
